# open.mp-gm-cpp

./: .gitmodules  CMakeLists.txt  README.md  players.sql
src/: main.cpp  main.h
src/dialogs/: dialogs.h
src/mysql/: mysql.cpp  mysql.h
src/utils/: utils.cpp  utils.h
